
Camlp5 Version 8.00-alpha05:
--------------------

* [24 Sep 2020] add support for 4.11.0 quoted-extension, viz {%foo|argle|} and
  {foo bar|argle|bar}

* [19 Sep 2020] multiple small changes

  * export more names from Reloc

  * in Q_MLast, allow Qast.Node to take a dotted name, e.g. Qast.Node
    "A.B.C" and convert it into an access-expression, so we can use
    quotations over types not in MLast.

Camlp5 Version 8.00-alpha04:
--------------------

* [01 Sep 2020] Add support for Ocaml 4.11.1.

  Support "#-types" with extended longidents (module-applications).  Test support for same.

Camlp5 Version 8.00-alpha03:
--------------------

* [22 Aug 2020] Add support for Ocaml 4.10.1.

Camlp5 Version 8.00-alpha02:
--------------------

* [18 Aug 2020] fixed original-syntax pretty-printing bug in class-decl params.

* [16 Aug 2020] added "-version" to succinctly print out camlp5 version
  (like "ocamlc --version").

  Added "constructor" quotation to q_MLast and q_ast, we can
  pattern-match with quotations, on constructor-declarations.

* [15 Aug 2020] fixed "-verbose" bug in mkcamlp5 (and updated doc)

* [13 Aug 2020] rehabilitated q_ast parsing kit and verified that it
  works just as q_MLast does (for revised syntax).  Still haven't done
  so original syntax (and it won't, since original syntax has
  ambiguities when introducing antiquotations everywhere).

  Also rehabbed the "test" tests, but not all of them work
  (e.g. "quot_o").

  Changed revised syntax (only revised -- original syntax remains the
  same) of GADT declarations to allow them to be pattern-matched with
  quotations.  Example: instead of

  type t = A : t1 -> t2 -> t

  use

  type t = A of t1 and t2 : t
  
  This allows quotations like

  type t = [ A of $list:args$ : $t$ ] ;

* [05 Aug 2020] Fixed top/rprint so that in revised syntax toplevel
  mode, exceptions get printed out correctly.

  TODO: Devise a unit-test for this, and go thru and verify that it